# hh_vacancies_in_sql

./: .gitignore  README.md  config.py  env.example  main.py  pyproject.toml
src/: class_api.py  class_company.py  class_dbmanager.py  class_vacancy.py  config.py  functions.py  main.py
tests/: conftest.py  test_classes_and_functions.py
